fixing spacing and fonts in post content

--- a/react-login/frontend/src/skillswapper_components/homepage/MainFeed/ServicePost.module.css
+++ b/react-login/frontend/src/skillswapper_components/homepage/MainFeed/ServicePost.module.css
@@ -30,6 +30,7 @@
   white-space: nowrap;
   flex-wrap: wrap;
   justify-content: space-between;
+  height: 70px;
 }
 
 @media (max-width: 991px) {
@@ -55,15 +56,17 @@
   aspect-ratio: 1;
   object-fit: contain;
   object-position: center;
-  width: 46px;
+  width: 35px;
 }
 
 .username {
   flex-basis: auto;
+  font-size: 24px;
 }
 
 .postDate {
-  font-size: 20px;
+  margin-top: 1%;
+  font-size: 15px;
   align-self: start;
 }
 
@@ -77,8 +80,3 @@
   line-height: 1.5;
 }
 
-@media (max-width: 991px) {
-  .postContent {
-    margin-left: 10px;
-  }
-}
