--- a/react-login/frontend/src/skillswapper_components/homepage/homepage.module.css
+++ b/react-login/frontend/src/skillswapper_components/homepage/homepage.module.css
@@ -1,16 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@400;700&display=swap');
+
 .container {
     display: flex;
+  }
+
+  .categorySection, .mainFeed {
+    font-family: 'Kantumruy Pro', sans-serif;
   }
   
   .categorySection {
     flex: 3; /*1/3 of the width*/
-    /* max-height: 100%; */
-    /* background-color: #f0f0f0; Optional background color */
   }
   
   .mainFeed {
     flex: 8; /* 2/3 of the width */
-    background-color: #ffffff; /* Optional background color */
+    background-color: #ffffff; 
   }
-  
-  /*3 and 7*/
